backweb1/DeploymentConfig.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backweb1-1.0
  labels:
    app: backweb1
    version: 1.0
spec:
  replicas: 1
  selector:
    app: backweb1
    version: 1.0
  template:
    metadata:
      labels:
        app: backweb1
        version: 1.0
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: backweb1-1.0
          image: image-registry.openshift-image-registry.svc:5000/demo/backweb1:1.0
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
  triggers:
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "backweb1:1.0"
        containerNames:
          - "backweb1"
