backweb1/DeploymentConfig_v11.yml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: backweb1-v11
  labels:
    app: backweb1
    version: v11
spec:
  replicas: 1
  selector:
    app: backweb1
    version: v11
  template:
    metadata:
      labels:
        app: backweb1
        version: v11
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: backweb1-v11
          image: image-registry.openshift-image-registry.svc:5000/demo/backweb1:1.1
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
  triggers:
    - type: "ImageChange"
      imageChangeParams:
        automatic: true
        from:
          kind: "ImageStreamTag"
          name: "backweb1:1.1"
        containerNames:
          - "backweb1-v11"
