backweb1/Deployment_v12.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backweb1-v12
  labels:
    app: backweb1
    version: v12
spec:
  replicas: 1
  selector:
    matchLabels:    
      app: backweb1
      version: v12
  template:
    metadata:
      labels:
        app: backweb1
        version: v12
      annotations:
        sidecar.istio.io/inject: 'true'
    spec:
      containers:
        - name: backweb1-v12
          image: image-registry.openshift-image-registry.svc:5000/demo/backweb1:1.2
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
