backweb1/Service.yml
kind: Service
apiVersion: v10
metadata:
  name: backweb1
  labels:
    app: backweb1
    service: backweb1
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: backweb1
  type: ClusterIP
  sessionAffinity: None
