backweb1/DestinationRule.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backweb1
spec:
  host: backweb1
  subsets:
  - name: v1
    labels:
      version: v1
