backweb1/DestinationRule_v11.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backweb1
spec:
  host: backweb1
  subsets:
  - labels:
      version: v10
    name: v10
  - labels:
      version: v11
    name: v11
