backweb1/VirtualService_v12.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backweb1
spec:
  hosts:
  - backweb1
  http:
  - route:
    - destination:
        host: backweb1
        subset: v10
      weight: 0
    - destination:
        host: backweb1
        subset: v11
      weight: 70
    - destination:
        host: backweb1
        subset: v12
      weight: 30
